# Rust_asses

./: .env.example  Cargo.toml  HISTORY.md  README.md
migrations/: 0001_init.sql
scripts/: validate.sh
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  repo.rs  state.rs
src/auth/: extractor.rs  jwt.rs  mod.rs  otp.rs  password.rs
src/handlers/: auth.rs  dev.rs  mod.rs  seed.rs  tasks.rs
src/models/: auth.rs  email_log.rs  mod.rs  task.rs  user.rs
src/routes/: mod.rs  router.rs
tests/: workflow.rs
